--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cpp Repo
-description: This repo has Cpp examples and projects for beginners and intermediate.
+title: HiFive01-RevB
+description: HiFive01-RevB02 is the SiFive RISC-V based board
 show_downloads: true
 theme: jekyll-theme-leap-day
